workmanager/objects/Work_Item__c.object
<CustomObject>
    <description>Work Manager App Object.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Difficulty_Level__c</fullName>
        <label>Difficulty Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1 a</fullName>
                </value>
                <value>
                    <fullName>1 b</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Date__c</fullName>
        <formula>Now()+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Idea</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Standard</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Estimated_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Standard</label>
    </listViews>
    <nameField>
        <displayFormat>WI-{0000000}</displayFormat>
        <label>Work Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <recordTypes>
        <fullName>Action_Work_Item</fullName>
        <active>true</active>
        <label>Action Work Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fix_Work_Item</fullName>
        <active>true</active>
        <label>Fix Work Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Idea_Work_Item</fullName>
        <active>true</active>
        <label>Idea Work Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Item</fullName>
        <active>true</active>
        <label>Work Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Type_field_after_creation_lock</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Type__c)</errorConditionFormula>
        <errorMessage>Please do not change the &quot;Type&quot; field. Seriously.</errorMessage>
    </validationRules>
</CustomObject>